Prevent the terminal panel from overlapping text editor content (see #3)

--- a/styles/levels.less
+++ b/styles/levels.less
@@ -71,11 +71,7 @@
 
   &.terminal-panel {
     background-color: @tool-panel-background-color;
-    border-top: 1px solid @tool-panel-border-color;
-    bottom: 0;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.07);
-    left: 0;
-    position: absolute;
     width: 100%;
     -webkit-user-select: none;
 
